cabal-version:      3.0
name:               slsdemo
version:            0.2.0.0
description:
  Please see the README on GitHub at <https://github.com/danwdart/projects#readme>

homepage:           https://github.com/danwdart/projects#readme
bug-reports:        https://github.com/danwdart/projects/issues
author:             Dan Dart
maintainer:         stack@dandart.co.uk
copyright:          2019 Dan Dart
license:            AGPL-3.0-only
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/danwdart/sls

common shared-properties
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions:
    DerivingStrategies
    UnicodeSyntax

  build-depends:      base >=4.7 && <5
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-local-signatures

  -- -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures -- only works on recent ghc
  ghcjs-options:      -dedupe

executable githubpr
  import:        shared-properties
  main-is:       github-pr.hs
  build-depends:
    , aeson               ^>=2.2.3.0
    , base                >=4.7       && <5
    , bytestring          ^>=0.12.2.0
    , containers          ^>=0.7
    , github              ^>=0.29
    , lens                ^>=5.3.3
    , serverless-haskell  ^>=0.12.6
    , text                ^>=2.1.2

executable emailme
  import:        shared-properties
  main-is:       emailme.hs
  build-depends:
    , aeson               ^>=2.2.3.0
    , amazonka-ses        ^>=2.0
    , base                >=4.7       && <5
    , bytestring          ^>=0.12.2.0
    , containers          ^>=0.7
    , lens                ^>=5.3.3
    , serverless-haskell  ^>=0.12.6
    , text                ^>=2.1.2

executable html
  import:         shared-properties
  main-is:        index.hs
  hs-source-dirs: html
  build-depends:
    , aeson         ^>=2.2.3.0
    , base          >=4.7       && <5
    , blaze-html    ^>=0.9.2.0
    , blaze-markup  ^>=0.8.3.0
    , bytestring    ^>=0.12.2.0
    , directory     ^>=1.3.9.0
    , fsutils       ^>=0.1.4
    , req           ^>=3.13.4
    , text          ^>=2.1.2
