cabal-version:      3.14
name:               jolharg-static
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable jolharg-static
    import:           warnings
    main-is:          test.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17.2.0
    hs-source-dirs:   src
    default-language: GHC2021
